--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,4 @@
+# Configuração para Cloudflare Pages
 name = "helpless-heliosphere"
 compatibility_date = "2026-02-02"
 pages_build_output_dir = "dist"
-
-[site]
-bucket = "./dist"
